--- a/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_72" orientation="portrait" appearance="light"/>
+    <device id="ipad11_0rounded" orientation="landscape" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -12,53 +13,85 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="212" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ze6-Nw-MT2">
-                                <rect key="frame" x="159.66666666666666" y="67" width="110.99999999999997" height="84"/>
+                                <rect key="frame" x="541.5" y="30" width="111" height="84"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="70"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="is really" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VDm-nk-PXr">
-                                <rect key="frame" x="158" y="210" width="114" height="43"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Fahrenheit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XkM-9j-Mf8">
-                                <rect key="frame" x="67.666666666666686" y="159" width="295" height="43"/>
+                                <rect key="frame" x="449.5" y="243.5" width="295" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ebV-Pb-Gb4">
-                                <rect key="frame" x="156.66666666666666" y="261" width="116.99999999999997" height="84"/>
+                                <rect key="frame" x="538.5" y="547.5" width="117" height="84"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="70"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Celsius" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x9a-x3-Q77">
-                                <rect key="frame" x="92" y="353" width="246" height="43"/>
+                                <rect key="frame" x="474" y="724" width="246" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qDQ-2M-ahx">
+                                <rect key="frame" x="20" y="641.5" width="1154" height="72.5"/>
+                                <color key="backgroundColor" systemColor="systemBrownColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J71-Rk-yRG">
+                                <rect key="frame" x="20" y="469" width="1154" height="72.5"/>
+                                <color key="backgroundColor" systemColor="systemBrownColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ggz-7S-WOo">
+                                <rect key="frame" x="20" y="296.5" width="1154" height="72.5"/>
+                                <color key="backgroundColor" systemColor="systemBrownColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yIf-3l-r1o">
+                                <rect key="frame" x="20" y="124" width="1154" height="72.5"/>
+                                <color key="backgroundColor" systemColor="systemBrownColor"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="is really" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VDm-nk-PXr">
+                                <rect key="frame" x="540" y="416" width="114" height="43"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
+                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.95686274509803915" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="XkM-9j-Mf8" firstAttribute="top" secondItem="Ze6-Nw-MT2" secondAttribute="bottom" constant="8" id="B5L-2A-B0l"/>
-                            <constraint firstItem="ebV-Pb-Gb4" firstAttribute="centerX" secondItem="XkM-9j-Mf8" secondAttribute="centerX" id="FMh-Cl-xY6"/>
-                            <constraint firstItem="Ze6-Nw-MT2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FTT-Dg-5sD"/>
-                            <constraint firstItem="x9a-x3-Q77" firstAttribute="centerX" secondItem="XkM-9j-Mf8" secondAttribute="centerX" id="Srj-L4-5HU"/>
-                            <constraint firstItem="VDm-nk-PXr" firstAttribute="top" secondItem="XkM-9j-Mf8" secondAttribute="bottom" constant="8" id="TWE-u6-6lG"/>
-                            <constraint firstItem="x9a-x3-Q77" firstAttribute="top" secondItem="ebV-Pb-Gb4" secondAttribute="bottom" constant="8" id="YQM-eT-Vit"/>
-                            <constraint firstItem="Ze6-Nw-MT2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="chB-Je-Iqc"/>
-                            <constraint firstItem="ebV-Pb-Gb4" firstAttribute="top" secondItem="VDm-nk-PXr" secondAttribute="bottom" constant="8" id="d72-dl-lGA"/>
-                            <constraint firstItem="Ze6-Nw-MT2" firstAttribute="centerX" secondItem="XkM-9j-Mf8" secondAttribute="centerX" id="hBw-qb-oym"/>
-                            <constraint firstItem="VDm-nk-PXr" firstAttribute="centerX" secondItem="XkM-9j-Mf8" secondAttribute="centerX" id="yJd-TE-8H8"/>
+                            <constraint firstItem="yIf-3l-r1o" firstAttribute="top" secondItem="Ze6-Nw-MT2" secondAttribute="bottom" constant="10" id="3Y8-RR-HI1"/>
+                            <constraint firstItem="XkM-9j-Mf8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="A0c-hf-o9c"/>
+                            <constraint firstItem="ebV-Pb-Gb4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ca8-D4-QrE"/>
+                            <constraint firstItem="J71-Rk-yRG" firstAttribute="top" secondItem="VDm-nk-PXr" secondAttribute="bottom" constant="10" id="Hbi-XU-Rrc"/>
+                            <constraint firstItem="yIf-3l-r1o" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="JaB-aQ-GNp"/>
+                            <constraint firstItem="ggz-7S-WOo" firstAttribute="top" secondItem="yIf-3l-r1o" secondAttribute="bottom" constant="100" id="Lgc-cQ-EH2"/>
+                            <constraint firstItem="J71-Rk-yRG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Qo5-9y-aW4"/>
+                            <constraint firstItem="x9a-x3-Q77" firstAttribute="top" secondItem="qDQ-2M-ahx" secondAttribute="bottom" constant="10" id="V5J-6U-N4x"/>
+                            <constraint firstItem="yIf-3l-r1o" firstAttribute="height" secondItem="ggz-7S-WOo" secondAttribute="height" id="Y4d-7d-zIh"/>
+                            <constraint firstItem="ggz-7S-WOo" firstAttribute="top" secondItem="XkM-9j-Mf8" secondAttribute="bottom" constant="10" id="YLX-fw-cAr"/>
+                            <constraint firstItem="Ze6-Nw-MT2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Zam-CL-hud"/>
+                            <constraint firstItem="yIf-3l-r1o" firstAttribute="height" secondItem="J71-Rk-yRG" secondAttribute="height" id="alX-i3-znj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="J71-Rk-yRG" secondAttribute="trailing" constant="20" id="c8s-Je-pYE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qDQ-2M-ahx" secondAttribute="trailing" constant="20" id="cH8-HJ-562"/>
+                            <constraint firstItem="x9a-x3-Q77" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gjc-g6-olc"/>
+                            <constraint firstItem="VDm-nk-PXr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gye-xo-Z3j"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ggz-7S-WOo" secondAttribute="trailing" constant="20" id="hBN-Pe-NCR"/>
+                            <constraint firstItem="J71-Rk-yRG" firstAttribute="top" secondItem="ggz-7S-WOo" secondAttribute="bottom" constant="100" id="hgU-zK-Mfe"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yIf-3l-r1o" secondAttribute="trailing" constant="20" id="ifd-cb-KRZ"/>
+                            <constraint firstItem="yIf-3l-r1o" firstAttribute="height" secondItem="qDQ-2M-ahx" secondAttribute="height" id="jPh-Gf-kfl"/>
+                            <constraint firstItem="qDQ-2M-ahx" firstAttribute="top" secondItem="ebV-Pb-Gb4" secondAttribute="bottom" constant="10" id="kWJ-0b-qjn"/>
+                            <constraint firstItem="yIf-3l-r1o" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="ktR-5g-IHu"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="qDQ-2M-ahx" secondAttribute="bottom" constant="100" id="ljU-C1-cyO"/>
+                            <constraint firstItem="ggz-7S-WOo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="nNl-9L-PSB"/>
+                            <constraint firstItem="qDQ-2M-ahx" firstAttribute="top" secondItem="J71-Rk-yRG" secondAttribute="bottom" constant="100" id="oBz-LE-UnV"/>
+                            <constraint firstItem="qDQ-2M-ahx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="xVI-bE-eHB"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -67,4 +100,9 @@
             <point key="canvasLocation" x="20.610687022900763" y="3.5211267605633805"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBrownColor">
+            <color red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
