Added a third tab from previous project and added random background from for converter

--- a/Quiz/Quiz/Base.lproj/Main.storyboard
+++ b/Quiz/Quiz/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
@@ -8,67 +8,69 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Quiz-->
+        <scene sceneID="nb2-Ha-6K0">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Quiz" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="bqF-re-vco" customClass="ViewController" customModule="Quiz" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3vf-0C-nvU">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mjh-1i-53c">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ccU-d5-bC2">
                                 <rect key="frame" x="184" y="473" width="25" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="utn-aj-I3k">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nDB-EV-rOK">
                                 <rect key="frame" x="184" y="249" width="25" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kDw-dn-bhf">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ihT-74-0Kj">
                                 <rect key="frame" x="130" y="288" width="133" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Next Question"/>
                                 <connections>
-                                    <action selector="showNextQuestion:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hnm-Sr-FBH"/>
+                                    <action selector="showNextQuestion:" destination="bqF-re-vco" eventType="touchUpInside" id="Krn-dP-21O"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hrt-6V-8bQ">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vsc-7C-VnG">
                                 <rect key="frame" x="133" y="511" width="127" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Show Answer"/>
                                 <connections>
-                                    <action selector="showAnswer:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OGX-6x-bGC"/>
+                                    <action selector="showAnswer:" destination="bqF-re-vco" eventType="touchUpInside" id="OKx-LF-1f1"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="z6s-3g-9sX"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Mjh-1i-53c" firstAttribute="top" secondItem="kDw-dn-bhf" secondAttribute="bottom" constant="150" id="18G-af-TbJ"/>
-                            <constraint firstItem="utn-aj-I3k" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="190" id="8CB-Lu-EpK"/>
-                            <constraint firstItem="Mjh-1i-53c" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ary-jK-edj"/>
-                            <constraint firstItem="Mjh-1i-53c" firstAttribute="centerX" secondItem="utn-aj-I3k" secondAttribute="centerX" id="GYS-HE-mkk"/>
-                            <constraint firstItem="hrt-6V-8bQ" firstAttribute="centerX" secondItem="utn-aj-I3k" secondAttribute="centerX" id="Kpf-hl-gxT"/>
-                            <constraint firstItem="kDw-dn-bhf" firstAttribute="centerX" secondItem="utn-aj-I3k" secondAttribute="centerX" id="L29-u5-EOz"/>
-                            <constraint firstItem="kDw-dn-bhf" firstAttribute="top" secondItem="utn-aj-I3k" secondAttribute="bottom" constant="18" id="QXI-RI-FMA"/>
-                            <constraint firstItem="hrt-6V-8bQ" firstAttribute="top" secondItem="Mjh-1i-53c" secondAttribute="bottom" constant="17" id="dEB-Ry-HuD"/>
+                            <constraint firstItem="nDB-EV-rOK" firstAttribute="top" secondItem="z6s-3g-9sX" secondAttribute="top" constant="190" id="4U2-as-6m5"/>
+                            <constraint firstItem="vsc-7C-VnG" firstAttribute="top" secondItem="ccU-d5-bC2" secondAttribute="bottom" constant="17" id="VzO-oH-VSl"/>
+                            <constraint firstItem="ccU-d5-bC2" firstAttribute="centerX" secondItem="nDB-EV-rOK" secondAttribute="centerX" id="ZX0-om-Hpa"/>
+                            <constraint firstItem="ihT-74-0Kj" firstAttribute="top" secondItem="nDB-EV-rOK" secondAttribute="bottom" constant="18" id="daV-6Z-2ij"/>
+                            <constraint firstItem="ihT-74-0Kj" firstAttribute="centerX" secondItem="nDB-EV-rOK" secondAttribute="centerX" id="f2x-bi-utS"/>
+                            <constraint firstItem="ccU-d5-bC2" firstAttribute="top" secondItem="ihT-74-0Kj" secondAttribute="bottom" constant="150" id="hLM-yp-vDj"/>
+                            <constraint firstItem="ccU-d5-bC2" firstAttribute="centerX" secondItem="3vf-0C-nvU" secondAttribute="centerX" id="hTa-PH-QpC"/>
+                            <constraint firstItem="vsc-7C-VnG" firstAttribute="centerX" secondItem="nDB-EV-rOK" secondAttribute="centerX" id="urJ-1H-Jtl"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Quiz" image="pencil" catalog="system" id="wPX-L1-mE6"/>
                     <connections>
-                        <outlet property="answerLabel" destination="Mjh-1i-53c" id="OF6-xB-sC8"/>
-                        <outlet property="questionLabel" destination="utn-aj-I3k" id="0Mk-LY-iWU"/>
+                        <outlet property="answerLabel" destination="ccU-d5-bC2" id="uol-eh-3d0"/>
+                        <outlet property="questionLabel" destination="nDB-EV-rOK" id="4RM-UX-fum"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8ct-A2-Z5B" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="140" y="5"/>
+            <point key="canvasLocation" x="1647" y="-701"/>
         </scene>
     </scenes>
     <resources>
+        <image name="pencil" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
